<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Task11" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="54" translatesAutoresizingMaskIntoConstraints="NO" id="w7C-c4-rzP">
                                <rect key="frame" x="162" y="292.5" width="90.5" height="311"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kWY-XO-EAu">
                                        <rect key="frame" x="0.0" y="0.0" width="90.5" height="50"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Login" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e7t-Zk-rJo">
                                        <rect key="frame" x="0.0" y="104" width="90.5" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="onLoginEditingChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="zWZ-iz-lm8"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P52-e8-naP">
                                        <rect key="frame" x="0.0" y="192" width="90.5" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="onPasswordEditingChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="Oc7-PS-Esr"/>
                                        </connections>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pvL-Ym-jiA">
                                        <rect key="frame" x="0.0" y="280" width="90.5" height="31"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Send"/>
                                        <connections>
                                            <action selector="onSendButtonTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6kX-NS-No3"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="e7t-Zk-rJo" firstAttribute="centerX" secondItem="w7C-c4-rzP" secondAttribute="centerX" id="Ask-pc-RZA"/>
                                    <constraint firstItem="pvL-Ym-jiA" firstAttribute="centerX" secondItem="w7C-c4-rzP" secondAttribute="centerX" id="HtR-ar-GJI"/>
                                    <constraint firstItem="P52-e8-naP" firstAttribute="centerX" secondItem="w7C-c4-rzP" secondAttribute="centerX" id="NJn-4A-E9h"/>
                                    <constraint firstItem="kWY-XO-EAu" firstAttribute="centerX" secondItem="w7C-c4-rzP" secondAttribute="centerX" id="isx-NM-Rhv"/>
                                </constraints>
                            </stackView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="w7C-c4-rzP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GSw-yf-X2p"/>
                            <constraint firstItem="w7C-c4-rzP" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="eAe-aG-zm8"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="labelWindow" destination="kWY-XO-EAu" id="8Hy-nP-Wh9"/>
                        <outlet property="loginTextField" destination="e7t-Zk-rJo" id="sPB-E8-euP"/>
                        <outlet property="passwordTextField" destination="P52-e8-naP" id="HMk-iX-CLX"/>
                        <outlet property="sendButton" destination="pvL-Ym-jiA" id="hX7-1q-8il"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="20" y="84"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
